--- a/App.config
+++ b/App.config
@@ -2,7 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<add name="voterDB"
-		     connectionString="server=cse.unl.edu;user id=afetzner;password=A4WX9RSt;port=3306">
-		</add>
+		     connectionString="server=cse.unl.edu;user id=afetzner;password=A4WX9RSt;port=3306"/>
 	</connectionStrings>
 </configuration>
