Big model change

--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VotingSystem\VotingSystem.csproj" />
+    <ProjectReference Include="..\VotingSystem-Backend\VotingSystem-Backend.csproj" />
   </ItemGroup>
 
 </Project>
