Implemented dynamic generation of frontend poll components retrieved from backend

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VotingSystem\VotingSystem.csproj" />
+    <ProjectReference Include="..\VotingSystem-Backend\VotingSystem-Backend.csproj" />
   </ItemGroup>
 
 </Project>
