--- a/VotingSystem-Frontend/package.json
+++ b/VotingSystem-Frontend/package.json
@@ -10,9 +10,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
     "jest-editor-support": "^30.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.1.0",
@@ -44,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0"
   }
 }
