Fixed dummy data loader

--- a/VotingSystem-Backend/VotingSystem-Backend.csproj
+++ b/VotingSystem-Backend/VotingSystem-Backend.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\AdminController.cs" />
+    <Compile Remove="Controllers\BallotIssueOptionController.cs" />
     <Compile Remove="Controllers\VoterController.cs" />
   </ItemGroup>
 
