Added results viewer class

--- a/VotingSystem-Backend/VotingSystem-Backend.csproj
+++ b/VotingSystem-Backend/VotingSystem-Backend.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Accessors\BallotIssueOptionAccessor.cs" />
     <Compile Remove="Controllers\AdminController.cs" />
     <Compile Remove="Controllers\BallotIssueOptionController.cs" />
     <Compile Remove="Controllers\VoterController.cs" />
