--- a/VotingSystem-Frontend/package.json
+++ b/VotingSystem-Frontend/package.json
@@ -23,11 +23,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prestart": "node aspnetcore-https && node aspnetcore-react",
     "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prestart": "node aspnetcore-https && node aspnetcore-react"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
