--- a/VotingSystem-Frontend/package.json
+++ b/VotingSystem-Frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.2",
+    "@devexpress/dx-react-chart-bootstrap4": "^3.0.2",
+    "@devexpress/dx-react-core": "^3.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -14,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
     "jest-editor-support": "^30.0.2",
+    "open-iconic": "^1.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.2.3",
