altered conn str

--- a/VotingSystem-Backend/Properties/web.config
+++ b/VotingSystem-Backend/Properties/web.config
@@ -3,6 +3,6 @@
 	<connectionStrings>
 		<add name="myConnectionString"
 			 providerName="MySql.Data.MySqlClient"
-			 connectionString="server=cse.unl.edu;database=afetzner;IntegratedSecurity=no;user id=afetzner;password=A4WX9RSt;port=3306" />
+			 connectionString="server=cse.unl.edu;database=afetzner;user id=afetzner;password=A4WX9RSt;port=3306" />
 	</connectionStrings>
 </configuration>
