--- a/VotingSystem-Frontend/.eslintrc.json
+++ b/VotingSystem-Frontend/.eslintrc.json
@@ -26,7 +26,7 @@
         "react/react-in-jsx-scope": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
+        "react-hooks/exhaustive-deps": "off",
         "react/prop-types": 0
     }
 }
