--- a/VotingSystem-Backend/Properties/launchSettings.json
+++ b/VotingSystem-Backend/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52022",
-      "sslPort": 44378
+      "applicationUrl": "http://localhost:58972/",
+      "sslPort": 44342
     }
   },
   "profiles": {
     "VotingSystem_Backend": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7237;http://localhost:5237",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7237;http://localhost:5237",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
